--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   name             : "Sonal Gupta"
   pronouns         : # example: "she/her"  
   bio              : "Interested in studying plant adaption and evolution"
-  position         : "Faculty Fellow, Trivedi School of Bioscience"
+  location         : "Faculty Fellow, Trivedi School of Bioscience"
   employer         : "Ashoka University"
   uri              : # URL
   email            : "sonal.gupta@ashoka.edu.in" 
