--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
   name             : "Sonal Gupta"
   pronouns         : # example: "she/her"  
   bio              : "Interested in studying plant adaption and evolution"
-  location         : "Faculty Fellow, Trivedi School of Bioscience"
-  employer         : "Ashoka University"
+  employer         : "Faculty Fellow, Trivedi School of Bioscience"
+  location         : "Ashoka University"
   uri              : # URL
   email            : "sonal.gupta@ashoka.edu.in" 
 
