--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Gupta Lab"
+title                    : "Sonal Gupta"
 title_separator          : #"-"
 name                     : &name "Sonal Gupta"
 description              : &description "personal description"
@@ -22,18 +22,18 @@ repository               : "gupta-plantgenevo/gupta-plantgenevo.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profilePic.png"
-  name             : "Sonal Gupta"
+  avatar           : #"http://gu[ta-plantgenevo.github.io/images/profilePic.jpg"
+  name             : #"Sonal Gupta"
   pronouns         : # example: "she/her"  
-  bio              : "Interested in studying plant adaption and evolution"
-  employer         : "Faculty Fellow, Trivedi School of Bioscience"
-  location         : "Ashoka University"
+  bio              : #"Interested in studying plant adaption and evolution"
+  employer         : #"Faculty Fellow, Trivedi School of Bioscience"
+  location         : #"Ashoka University"
   uri              : # URL
-  email            : "sonal.gupta@ashoka.edu.in" 
+  email            : #"sonal.gupta@ashoka.edu.in" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=cikpGiQAAAAJ&hl=en"
+  googlescholar    : #"https://scholar.google.com/citations?user=cikpGiQAAAAJ&hl=en"
   orcid            : # URL
   semantic         : # URL
   pubmed           : # URL
@@ -44,7 +44,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "gupta-plantgenevo"
+  github           : #"gupta-plantgenevo"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
