--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,14 +14,6 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Opportunities"
-    url: /opportunities/
-        
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
-    
-  - title: "Guide"
-    url: /markdown/
+  - title: "Contact"
+    url: /contact/
+            
