--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ defaults:
     values:
       layout: single
       author_profile: false
-      classes: wide
+      classes: full
       read_time: true
       comments: false
       share: false
@@ -135,7 +135,7 @@ defaults:
     values:
       layout: single
       author_profile: false
-      classes: wide
+      classes: full
   # _teaching
   - scope:
       path: ""
@@ -155,7 +155,7 @@ defaults:
       author_profile: false
       share: false
       comments: false
-      classes: wide
+      classes: full
   # _research
   - scope:
       path: ""
@@ -165,7 +165,7 @@ defaults:
       author_profile: false
       share: false
       comment: false
-      classes: wide
+      classes: full
   # _contact
   - scope:
       path: ""
