--- a/_config.yml
+++ b/_config.yml
@@ -145,7 +145,7 @@ defaults:
       author_profile: false
       share: false
       comments: false
-      classes: wide
+      classes: full
   # _publications
   - scope:
       path: ""
@@ -163,6 +163,7 @@ defaults:
     values:
       layout: single
       author_profile: false
+      toc: false
       share: false
       comment: false
       classes: full
